simple open graph meta info added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <meta property="og:title" content="오늘은 몇번째 주?">
+    <meta property="og:description" content="오늘은 올해의 몇 번째 주인가요?">
+
     <link rel="stylesheet" href="style.css">
-    <title>오늘은 몇번째주?</title>
+    <title>오늘은 몇번째 주?</title>
 </head>
 <body>
     <div class="wrapper">
