타이틀 문구 매끄럽게 수정
week number를 한국어로 주차라고 한다네요

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <meta property="og:title" content="오늘은 몇번째 주?">
+    <meta property="og:title" content="오늘은 몇주차?">
     <meta property="og:description" content="오늘은 올해의 몇 번째 주인가요?">
 
     <link rel="stylesheet" href="style.css">
-    <title>오늘은 몇번째 주?</title>
+    <title>오늘은 몇주차?</title>
 </head>
 <body>
     <div class="wrapper">
@@ -17,7 +17,7 @@
             <span id="date"></span>
         </div>
         <div class="box">
-            <div class="top">오늘은</div>
+            <div class="top">오늘은 올해의</div>
             <div class="mid"><span id="week-number"></span>번째 주</div>
             <div class="bot">입니다!</div>
         </div>
