--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta property="og:title" content="오늘은 몇 주차?">
     <meta property="og:description" content="오늘은 올해의 몇 번째 주인가요?">
 
+    <meta name="google-site-verification" content="lQYzouzyNJRvq4x6ywvKZ2OkDRb9sRi1YrrXSxXboV0" />
+
     <link rel="stylesheet" href="style.css">
     <title>오늘은 몇 주차?</title>
 </head>
