--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SB3T1K5D2H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SB3T1K5D2H');
+    </script>
 </body>
 
 </html>
